--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,14 @@
 [flake8]
+max-line-length = 99
 ignore =
     W503,
-    F811
+    F811,
+    F821
 exclude =
     tests/,
     */migrations/,
     venv/,
-    env/
+    env/,
 per-file-ignores =
     */settings.py:E501
 max-complexity = 10
